Algebraic Data Types in Java
- Java 15